testsuite/tests/typecheck/should_fail/T1897a.stderr

T1897a.hs:9:1: error:
    • Cannot infer an ambiguous type signature.
    • The type variable ‘a0’ is ambiguous.
    • When checking the inferred type
        foo :: forall {b}. Wob a0 b => b -> [b]
